# bigcommerce-pyairbyte-sample

./: .gitignore  README.md  bigcommerce_to_googledrive.py  categories.csv  credentials.json  customers.csv  env.sh  get-gdrive-token.py  orders.csv  products.csv  pyproject.toml  pyvenv.cfg  requirements.txt  token.json
src/: test.py  test2.py
src/airbyte_source_mybigcommerce/: __init__.py  source.py
src/airbyte_source_mybigcommerce.egg-info/: SOURCES.txt  requires.txt  top_level.txt
